--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
 	font-family: nunito;
-	src: url(fonts/Nunito-Regular.ttf);
+	src: url(../fonts/Nunito-Regular.ttf);
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: nunito;
-	src: url(fonts/Nunito-Bold.ttf);
+	src: url(../fonts/Nunito-Bold.ttf);
 	font-weight: bold;
 }
 
@@ -14,11 +14,22 @@
 	margin: 0;
 	padding: 0;
 	font-family: nunito, sans-serif;
-	background-color: #fff;
 }
 
 a {
 	text-decoration: none;
+}
+
+h1 {
+	font-size: 2em;
+	margin-bottom: 20px;
+	text-transform: uppercase;
+}
+
+h2 {
+	font-size: 1.1em;
+	color: #222;
+	box-sizing: content-box;
 }
 
 h3 {
@@ -28,13 +39,6 @@ h3 {
 	margin: 6px 0;
 }
 
-h2 {
-	font-size: 1.1em;
-	color: #222;
-	box-sizing: content-box;
-}
-
-
 
 
 /* header & navigation */
@@ -42,6 +46,9 @@ h2 {
 header {
 	position: sticky;
 	top: 0;
+	background-color: #fff;
+	box-shadow: 0 0 0 3px rgba(222, 222, 222, 0.2);
+	z-index: 1;
 }
 
 .cupomDesconto {
@@ -84,7 +91,8 @@ header {
 .userName p {
 	padding-left: 10px;
 	padding-right: 30px;
-	font-size: 0.9em;
+	font-size: 0.85em;
+	line-height: 1.15em;
 }
 
 #formSearch {
@@ -96,6 +104,7 @@ header {
 	height: 26px;
 	border: 2px solid #dedede;
 	border-radius: 30px;
+	padding-left: 10px;
 }
 
 #search:hover {
@@ -253,21 +262,26 @@ article img:hover {
 	transform: scale(1.5);
 }
 
-.newProduct {
+.imgProduct {
 	position: relative;
+}
+
+.newProduct {
+	position: absolute;
+	left: 0;
+	top: 0;
 	font-size: 0.75em;
 	background-color: #12588b;
 	color: #fff;
 	text-transform: uppercase;
 	border: 5px solid #12588b;
 	border-radius: 5px;
-	z-index: 1;
 }
 
 .price {
     margin-bottom: 6px;
     font-weight: bold;
-	font: 1.05em;
+	font: 1.2em;
 }
 
 .priceInfo {
@@ -299,6 +313,29 @@ article button:hover {
 }
 
 
-.content1 {
-	
+.textContent {
+	display: flex;
+	flex-flow: row;
+	justify-content: space-between;
+	align-items: center;
+	margin: 80px 15%;
+}
+
+.textContent2 {
+	background-color: #dedede;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.textContent img {
+	width: 400px;
+	height: auto;
+}
+
+.text1 {
+	margin-left: 20px;
+}
+
+.text1 p {
+	margin-bottom: 10px;
 }
