--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ header {
 #searchButton {
 	border: none;
 	margin-left: 5px;
+	background-color: #fff;;
 }
 
 #searchButton img:hover {	
@@ -127,6 +128,7 @@ header {
 
 #cart {
 	border: none;
+	background-color: #fff;
 }
 
 #cart img:hover {
@@ -168,6 +170,8 @@ nav a:hover {
 	color: #1c8adb;
 	font-weight: bold;
 }
+
+
 
 
 
@@ -228,6 +232,16 @@ nav a:hover {
 	margin-top: 80px;
 }
 
+.release a {
+	color: #222;
+	font-weight: bold;
+}
+
+.release a:hover {
+	color: #1c8adb;
+	text-decoration: underline;
+}
+
 .productContainer {
     display: flex;
     flex-flow: row wrap;
@@ -245,6 +259,21 @@ article {
     margin: 20px;
 	padding: 10px;
 	box-shadow: 0 0 1px #222;
+	position: relative;
+}
+
+.discountCard {
+	position: absolute;
+	left: 40%;
+	font-size: 0.65em;
+	color: #fff;
+	background-color: #5ec0be;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: 3px solid #5ec0be;
+	border-radius: 3px;
+	padding-inline: 10px;
+	margin-top: 8px;
 }
 
 article:hover {
@@ -282,6 +311,7 @@ article img:hover {
     margin-bottom: 6px;
     font-weight: bold;
 	font: 1.2em;
+	color: #12588b;
 }
 
 .priceInfo {
@@ -328,14 +358,51 @@ article button:hover {
 }
 
 .textContent img {
-	width: 400px;
+	width: 500px;
 	height: auto;
 }
 
 .text1 {
-	margin-left: 20px;
+	margin-left: 40px;
 }
 
 .text1 p {
 	margin-bottom: 10px;
+}
+
+.text2 h1 {
+	text-align: center;
+	margin-top: 40px;
+	margin-bottom: 30px;
+}
+
+.block {
+	display: flex;
+	align-items: center;
+	margin-right: 40px;
+	margin-bottom: 40px;
+}
+
+.block img {
+	width: 70px;
+	height: 70px;
+	float: left;
+	margin-right: 20px;
+}
+
+.hero2 {
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+.hero2 p {
+	position: absolute;
+	width: 100%;
+	font-size: 1.5em;
+	color: #fff;
+	background-color: #1c8adb;
+	text-align: center;
+	text-shadow: 1px 1px 5px #222;
+	padding: 30px 0;
 }
