--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,24 @@ h3 {
 	margin: 6px 0;
 }
 
+h4 {
+	font-size: 0.9em;
+	margin-bottom: 20px;
+}
+
+h5 {
+	font-size: 0.8em;
+	font-weight: normal;
+	margin-bottom: 8px;
+}
+
+button {
+	border: none;
+}
+
+button:hover {
+	cursor: pointer;
+}
 
 
 /* header & navigation */
@@ -108,20 +126,18 @@ header {
 }
 
 #search:hover {
-	background-color: rgba(28, 138, 219, 0.2);
+	background-color: rgba(189, 186, 255, 0.3);
 	border-radius: 30px;
 	box-shadow: 0 0 3px blueviolet;
 	transition-duration: 8ms;
 }
 
 #searchButton {
-	border: none;
 	margin-left: 5px;
 	background-color: #fff;;
 }
 
-#searchButton img:hover {	
-	cursor: pointer;
+#searchButton img:hover {
 	border-radius: 30px;
 	box-shadow: 0 0 3px blueviolet;
 }
@@ -132,7 +148,6 @@ header {
 }
 
 #cart img:hover {
-	cursor: pointer;
 	border-radius: 30px;;
 	box-shadow: 0 0 3px blueviolet;
 }
@@ -170,7 +185,6 @@ nav a:hover {
 	color: #1c8adb;
 	font-weight: bold;
 }
-
 
 
 
@@ -214,10 +228,12 @@ nav a:hover {
 
 
 
-.hero img {
+.featured img {
 	width: 100%;
 	height: auto;
 }
+
+
 
 
 
@@ -226,10 +242,11 @@ nav a:hover {
 
 .release {
 	display: flex;
-	flex-flow: row-wrap;
+	flex-flow: row wrap;
 	justify-content: space-between;
 	margin-inline: 10%;
 	margin-top: 80px;
+	margin-bottom: 10px;
 }
 
 .release a {
@@ -256,7 +273,7 @@ article {
     height: auto;
     width: 180px;
 	text-align: left;
-    margin: 20px;
+    margin: 10px;
 	padding: 10px;
 	box-shadow: 0 0 1px #222;
 	position: relative;
@@ -343,6 +360,10 @@ article button:hover {
 }
 
 
+
+
+
+
 .textContent {
 	display: flex;
 	flex-flow: row;
@@ -390,13 +411,13 @@ article button:hover {
 	margin-right: 20px;
 }
 
-.hero2 {
+.featured2 {
 	position: relative;
 	display: flex;
 	align-items: center;
 }
 
-.hero2 p {
+.featured2 p {
 	position: absolute;
 	width: 100%;
 	font-size: 1.5em;
@@ -405,4 +426,172 @@ article button:hover {
 	text-align: center;
 	text-shadow: 1px 1px 5px #222;
 	padding: 30px 0;
+}
+
+.newsletter {
+	display: block;
+	justify-content: center;
+	margin-bottom: 40px;
+}
+
+.newsletter h2 {
+	text-align: center;
+	margin-top: 80px;
+	margin-bottom: 20px;
+}
+
+.newsletter span {
+	color: #1c8adb;
+}
+
+.newsletterContainer {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	background-color: #dedede;
+	margin: 10px 15%;
+	height: auto;
+	padding: 60px 0;
+	border-radius: 10px;
+}
+
+.newsletterItem {
+	margin: 10px;
+}
+
+#clientName, #clientEmail {
+	width: 180px;
+	height: 40px;
+	border: 2px solid #dedede;
+	border-radius: 10px;
+	padding-left: 10px;
+}
+
+#clientName:hover, #clientEmail:hover {
+	background-color: rgba(189, 186, 255, 0.3);
+	border-radius: 10px;
+	box-shadow: 0 0 3px blueviolet;
+	transition-duration: 8ms;
+}
+
+.newsletterButton input {
+	background-color: #1c8adb;
+	font-size: 1em;
+	color: #fff;
+	width: 100px;
+	height: 40px;
+    border: 1px solid #1c8adb;
+	border-radius: 5px;
+	box-shadow: 0 0 1px #1c8adb;
+}
+
+.newsletterButton input:hover {
+	background-color: #12588b;
+	box-shadow: 0 0 3px blueviolet;
+}
+
+.privacyCheck {
+	font-size: 0.8em;
+}
+
+.privacyCheck a {
+	color: #222;
+	text-decoration: underline;
+}
+
+.subscribe input:hover {
+	cursor: pointer;
+}
+
+.aboutSection {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	align-items: start;
+	background-color: #f5f5f5;
+	padding-top: 40px;
+	padding-inline: 15%;
+	padding-bottom: 40px;
+}
+
+.aboutSection a {
+	color: #222;
+}
+
+.aboutSection a:hover {
+	color: #12588b;
+}
+
+.socialMedias {
+	display: inherit;
+	flex-flow: column;
+}
+
+.avantiSocial img {
+	filter: grayscale(1);
+	width: 140px;
+	height: auto;
+	margin: 15px;
+}
+
+.socialIcons {
+	display: inherit;
+	justify-content: space-between;
+}
+
+.socialIcons img {
+	width: 20px;
+	height: 20px;
+	margin: 15px;
+}
+
+.contactLinks {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	margin: 15px;
+}
+
+.contactColumn {
+	display: inherit;
+	flex-flow: column;
+	margin-inline: 25px;
+}
+
+.contactColumn span {
+	font-size: 0.9em;
+}
+
+.paymentmethods {
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.paymentMethods img {
+	width: 25px;
+	height: auto;
+	margin: 25px 10px 0;
+}
+
+footer {
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	align-items: center;
+	padding-inline: 15%;
+	margin: 40px auto;
+}
+
+.footerText {
+	text-align: center;
+	font-size: 0.8em;
+	margin-inline: 15%;
+	margin-bottom: 20px;
+}
+
+.footerIcons img {
+	width: 40px;
+	height: auto;
+	margin: 0 15px;
 }
