--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header {
 	font-weight: bold;
 	padding: 5px;
 	text-align: center;
+	margin-bottom: 10px;
 }
 
 .cupomDesconto span {
@@ -86,8 +87,10 @@ header {
 .headerContainer {
 	display: flex;
 	flex-flow: row wrap;
+	width: 75%;
 	height: auto;
-	justify-content: center;
+	margin: 0 auto;
+	justify-content: space-between;
 	align-items: center;
 	padding-top: 15px;
 }
@@ -97,10 +100,11 @@ header {
 	width: auto;
 }
 
+/*
 .headerContainer span {
 	margin: 5px 50px;
 }
-
+*/
 .userName {
 	display: flex;
 	padding: 0 10px;
@@ -119,7 +123,7 @@ header {
 
 #search {
 	width: 400px;
-	height: 26px;
+	height: 30px;
 	border: 2px solid #dedede;
 	border-radius: 30px;
 	padding-left: 10px;
@@ -142,9 +146,22 @@ header {
 	box-shadow: 0 0 3px blueviolet;
 }
 
-#cart {
+
+#cartButton {
 	border: none;
 	background-color: #fff;
+	position: relative;
+}
+
+.cartCount {
+	position: absolute;
+	right: -15%;
+	top: -15%;
+	font-size: 0.75em;
+	background-color: FireBrick;
+	color: #fff;
+	padding: 2px 6px;
+	border-radius: 50px;
 }
 
 #cart img:hover {
@@ -193,18 +210,7 @@ nav a:hover {
 	font-weight: bold;
 }
   
-.dropdownContent {
-	display: none;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	width: 100%;
-	height: auto;
-	background-color: #fff;
-	box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
-}
-
-.dropdownContentDP {
+.dropdownContent, .dropdownContentDP {
 	display: none;
 	position: absolute;
 	top: 100%;
@@ -324,6 +330,7 @@ nav a:hover {
 	font-weight: bold;
 	text-transform: uppercase;
 	color: #fff;
+	text-shadow: 1px 1px 3px #222;
 	background-color: rgba(0,0,0,0.1);
 	padding: 10px 20px;
 	border: 1px solid #fff;
@@ -332,7 +339,8 @@ nav a:hover {
 
 .dropdownImg button:hover {
 	color: #222;
-	background-color: rgba(255, 255, 255,0.7);
+	text-shadow: 1px 1px 5px #fff;
+	background-color: rgba(255, 255, 255,0.5);
 	box-shadow: 0 0 5px rgba(22,22,22,0.8);;
 	border: 1px solid rgba(22,22,22,1);
 	transition-duration: 0.5s;
@@ -373,6 +381,11 @@ nav a:hover {
 	height: 87%;
 	margin: 20px;
 	border-radius: 10px;
+}
+
+.imgText2 {
+	position: absolute;
+	left: 20px;
 }
 
 .categoryContainerDP {
