--- a/css/home.css
+++ b/css/home.css
@@ -330,3 +330,24 @@ h1 {
 	color: #222;
 	text-decoration: underline;
 }
+
+
+@media (max-width: 1100px) {
+
+    .swiper {
+        width: 80%;
+    }
+    
+    .text-content {
+        margin-inline: 10%;
+    }
+	
+    .text-content img {
+		width: 300px;
+	}
+
+    .block img {
+        width: 60px;
+        height: 60px;
+    }
+}
